# stacky

./: .env.example  .gitignore  CATALOG_MODALITY_AUDIT.md  CLAUDE.md  DECISIONS_AND_DISCOVERIES.md  DEVELOPMENT_PLAN.md  REFACTORING_PLAN.md  SESSION_RESUME.md  docker-compose.yml  package-lock.json  package.json  pnpm-workspace.yaml  turbo.json
apps/api/: Dockerfile  alembic.ini  entrypoint.sh  pyproject.toml
apps/api/app/: auth.py  celery_app.py  config.py  database.py  jwt.py  main.py  server.py
apps/api/data/: catalog_modality_mirrors.json  manual_catalog_profiles.json
apps/api/migrations/: env.py
apps/api/scripts/: apply_catalog_modality_mirrors.py  apply_manual_catalog_profiles.py  generate_profiles.py  import_supplement_stack_xls.py  seed.py  seed_exercise_catalog.py  seed_supplement_catalog.py  seed_templates.py  send_due_notifications.py
apps/api/tests/: conftest.py  test_adherence.py  test_ai_onboarding.py  test_ai_profile_generation.py  test_apply_and_interactions.py  test_auth_profile.py  test_batch_adherence.py  test_config.py  test_daily_plan.py  test_data_export.py  test_exercises.py  test_goal_progress.py  test_health_journal.py  test_jwt.py  test_medications.py  test_notifications.py  test_nutrition.py  test_peptides.py  test_preferences.py  test_protocol_templates.py  test_protocols.py  test_stack_score.py  test_supplements.py  test_therapies.py  test_tracking.py  test_user_medications.py  test_user_peptides.py  test_user_supplements.py  test_user_therapies.py  test_weekly_digest.py  test_wizard.py  test_workbook_supplement_import.py
(+339 files in other folders)
